# smart-solar-monitor-esp32

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  app_lcd.c  app_lcd.h  buzzer.c  buzzer.h  control_logic.c  control_logic.h  dht22.c  dht22.h  idf_component.yml  main.c  pzem.c  pzem.h  relay_control.c  relay_control.h  sensors.c  sensors.h  wifi_iot.c  wifi_iot.h
